<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusableInTouchMode="true"
        tools:context=".SettingsActivity">

        <Button
            android:id="@+id/reset_config_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="onResetConfigClick"
            android:text="@string/reset_config" />

        <TextView
            android:id="@+id/horizontal_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/reset_config_button"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#e2e2e2" />

        <Switch
            android:id="@+id/coppa_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontal_line"
            android:text="@string/coppa" />
        <Switch
            android:id="@+id/test_mode_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/coppa_switch"
            android:text="@string/test_mode" />

        <Switch
            android:id="@+id/caching_asset_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/test_mode_switch"
            android:text="@string/cache_aasets" />

        <Switch
            android:id="@+id/apptoken_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/caching_asset_switch"
            android:text="@string/dev_mode" />

        <EditText
            android:focusableInTouchMode="true"
            android:id="@+id/app_key_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/apptoken_switch"
            android:layout_marginTop="10dp"
            android:hint="@string/app_token" />

        <ImageButton
            android:id="@+id/add_placement_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignRight="@id/app_key_edit"
            android:layout_below="@id/app_key_edit"
            android:layout_marginTop="10dp"
            android:onClick="onAddPlacementClick"
            android:src="@android:drawable/ic_input_add" />

        <EditText
            android:id="@+id/placement_id_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/app_key_edit"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/add_placement_button"
            android:hint="@string/placement_id"
            android:imeOptions="actionDone" />

        <LinearLayout
            android:id="@+id/placement_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/placement_id_edit"
            android:layout_marginTop="10dp"
            android:orientation="vertical"/>


        <ImageButton
            android:id="@+id/add_targeting_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignRight="@id/app_key_edit"
            android:layout_below="@id/placement_container"
            android:layout_marginTop="10dp"
            android:onClick="onAddTargetingClick"
            android:src="@android:drawable/ic_input_add" />

        <LinearLayout
            android:id="@+id/targeting_value_container"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/placement_container"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/add_targeting_button"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/targeting_key"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/targeting_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/target_value"
                android:imeOptions="actionDone"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/targeting_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/targeting_value_container"
            android:layout_marginTop="10dp"
            android:orientation="vertical"/>

    </RelativeLayout>
</ScrollView>