<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_layouts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="net.pubnative.sdk.demo.activities.LayoutsActivity">

    <Button
            android:id="@+id/btn_ev_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Extended view configuration"/>

    <RadioGroup
        android:id="@+id/radio_grp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_ev_config"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:checked="true"
            android:text="@string/small" />

        <RadioButton
            android:id="@+id/radio_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/radio_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/large" />
    </RadioGroup>


    <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/radio_grp"/>

</RelativeLayout>
